--- a/views/productdetails.ejs
+++ b/views/productdetails.ejs
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 
-	<div id="toast-container" class="toast-container"></div>
+	
 	
 </body>
 
@@ -104,25 +104,50 @@
 	}
 
 
-	function addToSearchList(productId) {
+	async function addToSearchList(productId) {
 		try {
-			fetch('/search/add_to_search', {
+
+			const arrow = document.getElementById('jumping-arrow'); // Select the arrow element
+
+			const response = await fetch('/search/add_to_search', {
 				method: 'POST',
 				headers: {
 					'Content-Type': 'application/json',
 				},
 				body: JSON.stringify({ productId }),
-			})
-			.then(response => response.json())
-			.then(data => {
-				if (data.error) {
-					showToast('Failed product did not added to search list!.', 'error');
+			});
+
+			const data = await response.json();
+
+			if (response.status === 400) {
+				if (data.alreadyInList) {
+
+					arrow.classList.remove('hidden');
+					setTimeout(() => {
+						arrow.classList.add('hidden');
+					}, 20000); // 20 seconds
+					showToast('Product already in search list!', 'warning');
+				} else if (data.moreThan) {
+
+					arrow.classList.remove('hidden');
+					setTimeout(() => {
+						arrow.classList.add('hidden');
+					}, 20000); // 20 seconds
+					showToast('No more than 5 products can be added in list!', 'warning');
 				} else {
-					showToast('Product added to search list!', 'success');
+					showToast('Failed product did not added to search list!.', 'error');
 				}
-			})
-			.catch(err => console.error(err));
+			} else if (data.success) {
+
+				arrow.classList.remove('hidden');
+				setTimeout(() => {
+					arrow.classList.add('hidden');
+				}, 20000); // 20 seconds
+				showToast('Product added to search list!', 'success');
+			}
+
 		} catch (error) {
+			showToast('Failed product did not added to search list!.', 'error');
 			console.error('Error adding products to search list: ', error);
 		}
 	}
@@ -139,7 +164,7 @@
 		// Remove the toast after 4 seconds
 		setTimeout(() => {
 			toast.remove();
-		}, 4000);
+		}, 20000);
 	}
 
 	// Call the function to fetch and display products when the page loads
