--- a/views/style/products.css
+++ b/views/style/products.css
@@ -24,6 +24,8 @@ title {
 	grid-template-columns: repeat(4, 1fr);
 	gap: 20px;
 	margin-top: 20px;
+
+	/* padding-right: 100px; */
 }
 
 @media (max-width: 992px) {
@@ -196,26 +198,6 @@ title {
 }
 
 
-
-.filters {
-	margin: 20px;
-	text-align: left;
-}
-
-.filters h3 {
-	margin-bottom: 10px;
-	margin-top: 20px;
-}
-
-.filters div {
-	margin-bottom: 5px;
-}
-
-.filters input[type="checkbox"] {
-	margin-right: 8px;
-}
-
-
 /* From Uiverse.io by KhaledMatalkah */ 
 .custom-checkbox {
 	display: inline-flex;
@@ -334,6 +316,8 @@ title {
 
 
 
+
+
 /* Filters Section */
 .filters {
 	width: fit-content;
@@ -343,6 +327,19 @@ title {
 	padding-right: 50px;
 	background-color: #f9f9f9;
 	transition: transform 0.3s ease, opacity 0.3s ease;
+
+	margin-top: 90px;
+	margin-left: 20px;
+	text-align: left;
+}
+
+.filters h3 {
+	margin-bottom: 10px;
+	margin-top: 20px;
+}
+
+.filters div {
+	margin-bottom: 5px;
 }
 
 .filters.hidden {
