--- a/views/style/nav.css
+++ b/views/style/nav.css
@@ -383,6 +383,9 @@ header {
 .enh_search {
 	width:70px;
 	font-size: 40px;
+
+	position: relative; /* Needed for positioning the badge */
+    display: inline-block;
 }
 
 /* On Hover: Circle Effect */
@@ -412,4 +415,25 @@ header {
 	50% {
 		transform: translateY(20px); /* Move up by 10px */
 	}
+}
+
+
+/* The search-count badge */
+.search-count {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    transform: translate(20%, -20%);
+    background-color: #f5c426;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 1px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+    text-align: center;
+    min-width: 25px;
+    height: 25px;
+    line-height: 25px;
 }
