--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -35,8 +35,18 @@
 				<span class="search-count" id="total-items-count"><%= session.compare.totalItems %></span>
 			</div>
 
+			<!-- <div class="jumping-icon hidden" id="jumping-arrow">
+				<i class="fa-solid fa-up-long"></i>
+			</div> -->
+
+
 			<div class="jumping-icon hidden" id="jumping-arrow">
 				<i class="fa-solid fa-up-long"></i>
+				<div id="toast-container" class="toast-container">
+					<!-- <div class="toast success">This is a success toast!</div> -->
+					<div id="toast-container" class="toast-container"></div>
+
+				</div>
 			</div>
 		</a>
 
@@ -84,6 +94,6 @@
 	</div>
 </header>
 
-<div id="toast-container" class="toast-container"></div>
+<!-- <div id="toast-container" class="toast-container"></div> -->
 
 <script type="text/javascript" src="/nav_search.js"></script>
