--- a/views/productdetails.ejs
+++ b/views/productdetails.ejs
@@ -15,11 +15,56 @@
 
 	<div class="prod-retail">
 		<div class="show" id="show">
-			<section class="index-product" id="index-product"></section>
+			<section class="index-product" id="index-product">
+				<img src="<%= product.prdimg %>">
+
+
+				<!-- From Uiverse.io by mrhyddenn --> 
+				<button class="icon-btn add-btn" onclick="event.stopPropagation(); event.preventDefault(); addToSearchList(<%= product.productid %>)">
+					<div class="add-icon"></div>
+					<div class="btn-txt">Add for best retailer choice</div>
+				</button>
+				<h2><%= product.name %></h2>
+				<div class="descr"><%= product.description %></div>
+			</section>
 		</div>
 	
 		<div class="details" id="details">
-			<section class="index-retailer" id="index-retailer"></section>
+			<section class="index-retailer" id="index-retailer">
+				
+				<% if (retailers[0]["ProductRetailers.Price"] === null || retailers[0]["ProductRetailers.Price"] === "undefined") { %>
+
+					<h2>Retailers not found</h2>
+
+				<% } else { %>
+					<% retailers.forEach(retailer => { %>
+
+						<div class="retailer">
+							<a href="<%= retailer.Website %>">
+								<img src="<%= retailer.RetailerImg %>">
+							</a>
+							<div class="rate">(<%= retailer.AvgRating.toFixed(1) %>)⭐</div>
+
+							<a class="prdlink" href="https://www.electroholic.gr/el/product/PHOAPP00532" target="_blank">
+								<p><%= retailer.Name %></p>
+								<p><%= product.name %></p>
+								<div class="price"><%= retailer.Price %>€</div>
+							</a>
+
+							<form action="/cart/add" method="POST">
+								<input type="hidden" name="productId" value="<%= product.productid %>">
+								<input type="hidden" name="retailerId" value="<%= retailer.RetailerId %>">
+								<input type="hidden" name="quantity" value="1">
+
+								<button type="submit" class="add-to-cart-button">
+									<i class="fa-solid fa-cart-plus"></i>
+								</button>
+							</form>
+						</div>
+					<% }) %>
+				<% } %>
+
+			</section>
 		</div>
 	</div>
 
@@ -27,149 +72,6 @@
 	
 </body>
 
-<script>
-	// Fetch products from the server and render them on the page
-	async function fetchProductDetails() {
-		try {
-			const productdetails = <%- JSON.stringify(productDetail).replace(/</g, '\\u003c') %>; // Embed data without HTML entities
-			// console.log(productdetails);
-
-			const productdetailContainer = document.getElementById('index-product');
-
-			productdetailContainer.innerHTML = `
-
-				<img src="${productdetails[0].prdimg}">
-
-
-				<!-- From Uiverse.io by mrhyddenn --> 
-				<button class="icon-btn add-btn" onclick="event.stopPropagation(); event.preventDefault(); addToSearchList(${productdetails[0].productid})">
-					<div class="add-icon"></div>
-					<div class="btn-txt">Add for best retailer choice</div>
-				</button>
-				<h2>${productdetails[0].name}</h2>
-				<dic class="descr">${productdetails[0].description}</div>
-			`;
-
-			const retailersContainer = document.getElementById('index-retailer');
-
-			if (productdetails[0]["ProductRetailers.Price"] === null || productdetails[0]["ProductRetailers.Price"] === "undefined")
-			{
-				retailersContainer.innerHTML = `<h2>Retailers not found</h2>`;
-			}
-			else
-			{
-				// Render retailers dynamically
-				let retailerRating;
-
-				productdetails.forEach(retailer => {
-
-					const retailDiv = document.createElement('div');
-					retailDiv.classList.add('retailer');
-
-					if (retailer["ProductRetailers.Retailer.avgRating"] === null) {
-						retailerRating = "0.0";
-					} else {
-						retailerRating = retailer["ProductRetailers.Retailer.avgRating"];
-					}
-
-
-					retailDiv.innerHTML = `
-						
-						<a href="${retailer["ProductRetailers.Retailer.Website"]}"><img src="${retailer["ProductRetailers.Retailer.retailerimg"]}"></a>
-						
-						<div class="rate">(${retailerRating})⭐</div>
-						
-						<a class="prdlink" href="${retailer["ProductRetailers.PRODUCTLINK"]}" target="_blank">
-							<p>${retailer["ProductRetailers.Retailer.Name"]}</p>
-							<p>${retailer.name}</p>
-							<div class="price">${retailer["ProductRetailers.Price"]}€</div>
-						</a>
-						<form action="/cart/add" method="POST">
-							<input type="hidden" name="productId" value="${productdetails[0].productid}" />
-							<input type="hidden" name="retailerId" value="${retailer["ProductRetailers.Retailer.RetailerId"]}" />
-							<input type="hidden" name="quantity" value="1" />
-							<button type="submit" class="add-to-cart-button">
-								<i class="fa-solid fa-cart-plus"></i>
-							</button>
-						</form>
-					`;
-
-					retailersContainer.appendChild(retailDiv);
-				});
-			}
-			
-		} catch (error) {
-			console.error('Error fetching product details: ', error);
-		}
-	}
-
-
-	async function addToSearchList(productId) {
-		try {
-
-			const arrow = document.getElementById('jumping-arrow'); // Select the arrow element
-
-			const response = await fetch('/search/add_to_search', {
-				method: 'POST',
-				headers: {
-					'Content-Type': 'application/json',
-				},
-				body: JSON.stringify({ productId }),
-			});
-
-			const data = await response.json();
-
-			if (response.status === 400) {
-				if (data.alreadyInList) {
-
-					arrow.classList.remove('hidden');
-					setTimeout(() => {
-						arrow.classList.add('hidden');
-					}, 20000); // 20 seconds
-					showToast('Product already in search list!', 'warning');
-				} else if (data.moreThan) {
-
-					arrow.classList.remove('hidden');
-					setTimeout(() => {
-						arrow.classList.add('hidden');
-					}, 20000); // 20 seconds
-					showToast('No more than 5 products can be added in list!', 'warning');
-				} else {
-					showToast('Failed product did not added to search list!.', 'error');
-				}
-			} else if (data.success) {
-
-				arrow.classList.remove('hidden');
-				setTimeout(() => {
-					arrow.classList.add('hidden');
-				}, 20000); // 20 seconds
-				showToast('Product added to search list!', 'success');
-			}
-
-		} catch (error) {
-			showToast('Failed product did not added to search list!.', 'error');
-			console.error('Error adding products to search list: ', error);
-		}
-	}
-
-
-	function showToast(message, type) {
-		const toastContainer = document.getElementById('toast-container');
-		const toast = document.createElement('div');
-		toast.className = `toast ${type}`; // Add success or error styling
-		toast.textContent = message;
-
-		toastContainer.appendChild(toast);
-
-		// Remove the toast after 4 seconds
-		setTimeout(() => {
-			toast.remove();
-		}, 20000);
-	}
-
-	// Call the function to fetch and display products when the page loads
-	fetchProductDetails();
-	
-</script>
+<script type="text/javascript" src="/productdetails.js"></script>
 
 <%- include('./partials/footer.ejs') %>
