Add: User profile page. DB inserts for products.

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,10 +8,8 @@
 	<section class="contact">
 		<div class="content-div">
 			<h2>Contact Us</h2>
-			<p>
-				We are a team of new people who are interested to help you find the BEST offers. 
-				<br>
-				Please feel free to visit us on office or contact with us on our e-mail or on phone.
+			<p>We are a team of new people who are interested to help you find the BEST offers.</p>
+			<p>	Please feel free to visit us on office or contact with us on our e-mail or on phone.</p>
 			</p>
 		</div>
 		<div class="contact-container">
