--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,15 +5,14 @@
 	<%- include('./partials/nav.ejs') %>
 
 	<div class="home">
-		<br><br>
+
 
 		<div id="deal_of_the_day">
-			<h2>Deal Of The Day</h2><br>
+			<h2>Deal Of The Day</h2>
 			<img src="https://images.vans.com/is/image/VansEU/VN0A3WMAVNE-HERO?$PDP-FULL-IMAGE$" width="300" height="300">
-			<br><br><h3 id="demo"></h3>
+			<h3 id="demo"></h3>
 		</div>
 
-		<br><br><br>
 	</div>
 </body>
 
