--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -58,9 +58,9 @@
 					<i class="fa fa-user-circle" aria-hidden="true"></i>
 				</button>
 				<div class="dropdown-menu">
-					<a href="/profile">My Profile</a>
-					<a href="/orders">My Orders</a>
-					<a href="/reviews">My Reviews</a>
+					<a href="/user/profile">My Profile</a>
+					<a href="/user/orders">My Orders</a>
+					<a href="/user/reviews">My Reviews</a>
 					<form action="/login/logout" method="POST">
 						<button type="submit" class="logout-btn">Logout</button>
 					</form>
@@ -93,7 +93,5 @@
 		</a></li>
 	</div>
 </header>
-
-<!-- <div id="toast-container" class="toast-container"></div> -->
 
 <script type="text/javascript" src="/nav_search.js"></script>
