--- a/views/style/products.css
+++ b/views/style/products.css
@@ -122,7 +122,7 @@ title {
 	overflow: hidden;
 
 	position: absolute; 
-	bottom: 20px;
+	bottom: 10px;
 }
 
 .button, .button__icon, .button__text {
@@ -376,10 +376,9 @@ title {
 		transform: translateX(0);
 		opacity: 1;
 
-		top:130px;
+		top:70px;
 		padding: 20px;
 		width: fit-content;
-
 		background-color: #f9f9f9;
 	}
 
@@ -438,4 +437,40 @@ title {
 }
 .filters-toggle:hover svg {
 	fill: white;
+}
+
+
+.filters-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem; /* Add space between the header and the filters */
+}
+
+.filters-header h2 {
+    margin: 0;
+    font-size: 1.5rem; /* Adjust size as needed */
+}
+
+.clear-filters {
+    background-color: #f44336; /* Red color for emphasis */
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.clear-filters:hover {
+    background-color: #d32f2f; /* Darker red on hover */
+}
+
+
+.filters-header a {
+	color: rgba(88, 85, 85, 0.637);
+	margin-left: 10px;
+	font-size: large;
+	cursor: pointer;
 }
