--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,17 +6,37 @@
 
 	<div class="home">
 
-
-		<div id="deal_of_the_day">
-			<h2>Deal Of The Day</h2>
-			<img src="https://images.vans.com/is/image/VansEU/VN0A3WMAVNE-HERO?$PDP-FULL-IMAGE$" width="300" height="300">
-			<h3 id="demo"></h3>
+		<div class="deal-container">
+			<h1 class="deal-title">Deal of the Day</h1>
+			<% if (product) { %>
+				<div class="deal-product">
+					<img src="<%= product.imageUrl %>" alt="<%= product.name %>" class="product-image" width="300" height="300">
+					
+					<div id="deal-timer" class="countdown">
+						Time Left: <span id="time-left">00:00:00</span>
+					</div>
+					
+					
+					<div class="product-details">
+						<h2 class="product-name"><%= product.name %></h2>
+						<p class="product-prices">
+							<span class="initial-price">€<%= product.price %></span>
+							<span class="discounted-price">€<%= product.discountedPrice %></span>
+						</p>
+						<p class="discount-badge"><%= product.discountPercent %>% OFF</p>
+					</div>
+				</div>
+			<% } else { %>
+				<p>No deal available today. Check back later!</p>
+			<% } %>
 		</div>
 
 	</div>
 </body>
 
-<script>
+<script type="text/javascript" src="/deal.js"></script>
+
+<!-- <script>
 
 	// Fetch categories from the server and render them on the page
 	async function fetchDealOfDay() {
@@ -71,6 +91,6 @@
 			document.getElementById("demo").innerHTML = "EXPIRED";
 		}
 	}, 1000);
-</script>
+</script> -->
 
 <%- include('./partials/footer.ejs') %>
