--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,10 @@
 			<h1 class="deal-title">Deal of the Day</h1>
 			<% if (product) { %>
 				<div class="deal-product">
-					<img src="<%= product.imageUrl %>" alt="<%= product.name %>" class="product-image" width="300" height="300">
+					<a href="<%= product.link %>">
+						<img src="<%= product.imageurl %>" alt="<%= product.name %>" class="product-image" width="300" height="300">
+					</a>
+					
 					
 					<div id="deal-timer" class="countdown">
 						Time Left: <span id="time-left">00:00:00</span>
@@ -18,7 +21,7 @@
 					
 					
 					<div class="product-details">
-						<h2 class="product-name"><%= product.name %></h2>
+						<a href="<%= product.link %>"><h2 class="product-name"><%= product.name %></h2></a>
 						<p class="product-prices">
 							<span class="initial-price">€<%= product.price %></span>
 							<span class="discounted-price">€<%= product.discountedPrice %></span>
@@ -35,62 +38,5 @@
 </body>
 
 <script type="text/javascript" src="/deal.js"></script>
-
-<!-- <script>
-
-	// Fetch categories from the server and render them on the page
-	async function fetchDealOfDay() {
-		try {
-			const response = await fetch('/dealofday');
-			const dealOfDay = await response.json();
-
-
-			const categoriesContainer = document.getElementById('index-category');
-
-			
-			// console.log(dealOfDay[0]);
-		} catch (error) {
-			console.error('Error fetching categories:', error);
-		}
-	}
-
-	// Call the function to fetch and display categories when the page loads
-	fetchDealOfDay();
-
-
-
-	// Set the date we're counting down to
-	//var countDownDate = new Date("Jan 5, 2022 15:37:25").getTime();
-	const today = new Date()
-	const tomorrow = new Date(today)
-	tomorrow.setDate(tomorrow.getDate() + 1)
-	tomorrow.setHours(0,0,0,0);
-	var countDownDate = tomorrow;
-
-	// Update the count down every 1 second
-	var x = setInterval(function() {
-
-		// Get today's date and time
-		var now = new Date().getTime();
-			
-		// Find the distance between now and the count down date
-		var distance = countDownDate - now;
-			
-		// Time calculations for hours, minutes and seconds
-		var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-		var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-		var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-			
-		// Output the result in an element with id="demo"
-		document.getElementById("demo").innerHTML = "Time remain: " + hours + "h "
-		+ minutes + "m " + seconds + "s";
-			
-		// If the count down is over, write some text 
-		if (distance < 0) {
-			clearInterval(x);
-			document.getElementById("demo").innerHTML = "EXPIRED";
-		}
-	}, 1000);
-</script> -->
 
 <%- include('./partials/footer.ejs') %>
